Module 01 RelationShip WIP v1

--- a/Module01-RelationShip/ex00/Makefile
+++ b/Module01-RelationShip/ex00/Makefile
@@ -3,7 +3,8 @@ NAME = relationship
 
 SRCS =	main.cpp \
 		Tools.cpp \
-		Worker.cpp #
+		Worker.cpp \
+		Workshop.cpp #
 OBJS = $(SRCS:.cpp=.o)
 
 CC = c++
