Module 01 RelationShip WIP v1.5 : Workshop almost done

--- a/Module01-RelationShip/ex00/Makefile
+++ b/Module01-RelationShip/ex00/Makefile
@@ -3,8 +3,7 @@ NAME = relationship
 
 SRCS =	main.cpp \
 		Tools.cpp \
-		Worker.cpp \
-		Workshop.cpp #
+		Worker.cpp #
 OBJS = $(SRCS:.cpp=.o)
 
 CC = c++
